--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Hop Hop Array</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
+    <script src="https://use.fontawesome.com/c9da0ea81b.js"></script>
   </head>
   <body>
     <div id="app"></div>
