feature: navbar css

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
     <title>Hop Hop Array</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap');
+      </style>
   </head>
   <body>
     <div id="app"></div>
+
   </body>
 </html>
