--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
     <script src="https://use.fontawesome.com/c9da0ea81b.js"></script>
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
-
   </body>
 </html>
