--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
