feature: add meta tags and update readme links

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>Hop Hop Array</title>
+
+    <meta property="og:title" content="[Hop Hop] Array" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://hophoparray.com" />
+    <meta property="og:image" content="/images/code-editor.png" />
+
+    <title>[Hop Hop] Array</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
     <script src="https://use.fontawesome.com/c9da0ea81b.js"></script>
@@ -11,7 +17,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
