--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta property="og:title" content="[Hop Hop] Array" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hophoparray.com" />
-    <meta property="og:image" content="/images/code-editor.png" />
+    <meta
+      property="og:image"
+      content="http://hophoparray.com/images/code-editor.png"
+    />
 
     <title>[Hop Hop] Array</title>
     <link rel="stylesheet" href="/style.css" />
